--- a/less/index.less
+++ b/less/index.less
@@ -91,7 +91,7 @@ html, body {
 }
 
 .pad(){
-	margin: 2%;
+	margin: 0.5%;
 	padding: 1%;
 }
 
@@ -99,7 +99,6 @@ html, body {
 
 .textContainer{
 	width: 50%;
-	border: 2px solid lightgrey;
 }
 
 header{
@@ -169,6 +168,19 @@ header{
 .lowerSection{
 	margin-top: 2%;
 	.center();
+	
+
+	.innerContainer{
+		width: 100%;
+		.center();
+		flex-direction: row;
+	}
+
+	.bar{
+		width:100%;
+		border-bottom: 2px solid lightgrey;
+		.pad();
+	}
 	
 	.textContainer{
 		Width: 80%;
